@@ -30,8 +30,11 @@ be_visitor_null_return_value::~be_visitor_null_return_value (void)
 }
 
 int
-be_visitor_null_return_value::visit_array (be_array *)
+be_visitor_null_return_value::visit_array (be_array *node)
 {
+  os_ << "static_cast< ::" << node->full_name ()
+      << "_slice *> (0)";
+
   return 0;
 }
 
@@ -118,20 +121,42 @@ be_visitor_null_return_value::visit_predefined_type (be_predefined_type *node)
 }
 
 int
-be_visitor_null_return_value::visit_sequence (be_sequence *)
+be_visitor_null_return_value::visit_sequence (be_sequence *node)
 {
+  os_ << "static_cast< ::" << node->full_name ()
+      << " *> (0)";
+
   return 0;
 }
 
 int
-be_visitor_null_return_value::visit_string (be_string *)
+be_visitor_null_return_value::visit_string (be_string *node)
 {
+  if (node->width () == sizeof (char))
+    {
+      os_ << "static_cast<char *> (0)";
+    }
+  else
+    {
+      os_ << "static_cast< ::CORBA::WChar *> (0)";
+    }
+
   return 0;
 }
 
 int
-be_visitor_null_return_value::visit_structure (be_structure *)
+be_visitor_null_return_value::visit_structure (be_structure *node)
 {
+  if (node->size_type () == AST_Type::FIXED)
+    {
+      os_ << " ::" << node->full_name () << " ()";
+    }
+  else
+    {
+      os_ << "static_cast< ::" << node->full_name ()
+          << " *> (0)";
+    }
+
   return 0;
 }
 
@@ -142,8 +167,18 @@ be_visitor_null_return_value::visit_typedef (be_typedef *node)
 }
 
 int
-be_visitor_null_return_value::visit_union (be_union *)
+be_visitor_null_return_value::visit_union (be_union *node)
 {
+  if (node->size_type () == AST_Type::FIXED)
+    {
+      os_ << " ::" << node->full_name () << " ()";
+    }
+  else
+    {
+      os_ << "static_cast< ::" << node->full_name ()
+          << " *> (0)";
+    }
+
   return 0;
 }
 
